Ajustes Margem e botões

--- a/src/index.html
+++ b/src/index.html
@@ -71,99 +71,7 @@
     </ul>
 
   </header>
-<<<<<<< HEAD
-=======
-
-
-  <!-- Modal de Login -->
-  <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="loginModalLabel">Login</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <form>
-            <div class="form-group">
-              <label for="username">Username</label>
-              <input type="text" class="form-control" id="username" placeholder="Enter your username">
-            </div>
-            <div class="form-group">
-              <label for="password">Password</label>
-              <input type="password" class="form-control" id="password" placeholder="Enter your password">
-            </div>
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-primary" id="loginButton">Login</button>
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-    </div>
-  </div>
-     <!-- Modal de Signup -->
-  <div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="signupModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="signupModalLabel">Sign Up</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <!-- Conteúdo do formulário de cadastro -->
-          <form>
-            <div class="form-group">
-              <label for="signupUsername">Username</label>
-              <input type="text" class="form-control" id="signupUsername" placeholder="Enter username">
-            </div>
-            <div class="form-group">
-              <label for="signupPassword">Password</label>
-              <input type="password" class="form-control" id="signupPassword" placeholder="Enter password">
-            </div>
-            <div class="form-group">
-              <label for="signupConfirmPassword">Confirm Password</label>
-              <input type="password" class="form-control" id="signupConfirmPassword" placeholder="Confirm password">
-            </div>
-            <div class="form-group">
-              <label for="signupEmail">Email</label>
-              <input type="email" class="form-control" id="signupEmail" placeholder="Enter email">
-            </div>
-            
-            <div id="signupSuccessMessage" style="display: none;">Dados cadastrados com sucesso</div>
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary" id="signupButton" data-dismiss="modal">Signup</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-
-  <main>
-
-    <select name="Gênero">
-  <option value="Terror">Terror</option>
-  <option value="Animação" selected>Animação</option>
-  <option value="Comédia">Comédia</option>
-</select>
-
-<select name="Streaming">
-  <option value="Netflix">Netflix</option>
-  <option value="AmazonPrime" selected>AmazonPrime</option>
-  <option value="Globoplay">Globoplay</option>
-</select>
-
->>>>>>> sprint3
-    <h1 id="title-cine">Nas telas do Cinema</h1>
+    <h1 id="title">Nas telas do Cinema</h1>
 
     <!-- Full-width images with number -->
     <div class="mySlides fades " id="img-active">
@@ -192,24 +100,14 @@
         Trailer</button>
       <img src="./img/Super-Mario-Pós-créditos.jpg" class="images">
     </div>
-<<<<<<< HEAD
     <div class="mySlides fades">
       <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/cDNkh5WybZo">Assista
-=======
-    <div class="mySlides fade">
-      <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/JcKRaUGJcqY">Assista
->>>>>>> d2df1efea958b108ba54ab7c3abf44ed498010a3
         ao
         Trailer</button>
       <img src="./img/Meganbanner.jpg" class="images">
     </div>
-<<<<<<< HEAD
     <div class="mySlides fades">
       <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/cDNkh5WybZo">Assista
-=======
-    <div class="mySlides fade">
-      <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/7MRcuN9_Pfo">Assista
->>>>>>> d2df1efea958b108ba54ab7c3abf44ed498010a3
         ao
         Trailer</button>
       <img src="./img/pearlbanner.jpg" class="images">
@@ -237,7 +135,7 @@
       <span class="dot" onclick="currentSlide(6)"></span>
     </div>
     </section>
-    <h1>Lançamentos</h1>
+    <h1 id="launch-title">Lançamentos</h1>
     
     <div class="glider-contain">
       <div class="glider">
@@ -383,7 +281,7 @@
     </div>
     <div id="resp-dots"></div>
 
-    <h1>Aclamados pela Crítica</h1>
+    <h1 id="title">Aclamados pela Crítica</h1>
 
     <div class="glider-contain">
       <div class="glider-2">
@@ -427,14 +325,9 @@
           <img src="./img/ForrestGumpcard.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Forrest Gump: O Contador de Histórias (1994)</h2>
-<<<<<<< HEAD
             <p>Duração: 2h22min
               Gênero: Drama, Romance
             </p>
-=======
-            <p>Duração: 2h22min</p>
-            <p>Gênero: Drama, Romanse</p>
->>>>>>> sprint3
             <p>Onde Assistir: <a href="https://www.primevideo.com/dp/amzn1.dv.gti.dcb980c4-4b61-2618-1a5e-75b3b56f1996?autoplay=0&ref_=atv_cf_strg_wb"
                 target="_blank">AmazonPrime</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/vDY_uZAaU7g">Assista ao
@@ -469,14 +362,9 @@
           <img src="./img/cantandonachuvacrd.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Cantando na Chuva (1952)</h2>
-<<<<<<< HEAD
             <p>Duração: 1h43min
               Gênero: Musical, Romance
             </p>
-=======
-            <p>Duração: 1h43min</p>
-            <p>Gênero: Musical, Romanse</p>
->>>>>>> sprint3
             <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=_fBiAERKFAs.P"
                 target="_blank">Google Play Filmes e Tv</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/s7z_NgOTQu8">Assista ao
