Bug Img PeterPan Fixed

--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
         Trailer</button>
       <img src="./img/pearlbanner.jpg" class="images">
     </div>
-    <div class="mySlides fade">
+    <div class="mySlides fades">
       <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista
         ao
         Trailer</button>
@@ -133,6 +133,7 @@
       <span class="dot" onclick="currentSlide(4)"></span>
       <span class="dot" onclick="currentSlide(5)"></span>
       <span class="dot" onclick="currentSlide(6)"></span>
+      <span class="dot" onclick="currentSlide(7)"></span>
     </div>
     </section>
     <h1 id="launch-title">Lançamentos</h1>
