--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
     </ul>
 
   </header>
-    <h1 id="title">Nas telas do Cinema</h1>
+    <h1 id="title-cine">Nas telas do Cinema</h1>
 
     <!-- Full-width images with number -->
     <div class="mySlides fades " id="img-active">
