--- a/src/index.html
+++ b/src/index.html
@@ -34,8 +34,6 @@
   
   <title>Cine Guide</title>
 </head>
-
-<main>
 <body>
   <script src="./scripts/script.js" defer></script>
   <script src="./scripts/login.js" defer></script>
@@ -46,7 +44,7 @@
         <h1> Logo</h1>
       </li>
       <li>
-        <input type="text"> <span class="material-symbols-outlined"> search </span>
+        <input id="search-input" type="text" placeholder="Busque por ator, filme ou série.."> <span id="search-icon" class="material-symbols-outlined"> search </span>
       </li>
       <li>
         Sessão Nostalgia <span class="material-symbols-outlined"> videocam </span>
@@ -67,18 +65,19 @@
         <li>Pesquisar</li>
       </ul>
     </menu>
+    
+  </ul>
+  
+</header>
+<main>
+<h1 id="title-cine">Nas telas do Cinema</h1>
 
-    </ul>
-
-  </header>
-    <h1 id="title-cine">Nas telas do Cinema</h1>
-
-    <!-- Full-width images with number -->
-    <div class="mySlides fades " id="img-active">
-      <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/2x-2iYxgMFU">Assista
-        ao
-        Trailer</button>
-      <img src="./img/Homem aranha de volta.png" class="images">
+<!-- Full-width images with number -->
+<div class="mySlides fades " id="img-active">
+  <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/2x-2iYxgMFU">Assista
+    ao
+    Trailer</button>
+    <img src="./img/Homem aranha de volta.png" class="images">
     </div>
 
     <div class="mySlides fades">
@@ -379,7 +378,7 @@
     </div>
     <div id="responsive-dots"></div>
     <script src="./Glider.js-master/glider.min.js" defer></script>
-
+    <script src="./scripts/search_film_API.js" defer></script>
   </main>
 
   <footer class="footer">
