Adicionando Feature de busca

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
   <script src="./scripts/iframe.js" defer></script>
   <!--Link CSS -->
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/movie-cards.css">
   <!--Links Glider-->
   <link rel="stylesheet" href="./Glider.js-master/glider.min.css">
   
