--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,8 @@
   <link rel="stylesheet" href="./css/movie-cards.css">
   <!--Links Glider-->
   <link rel="stylesheet" href="./Glider.js-master/glider.min.css">
-  
   <!--Link Boostrap -->
-  <!-- --> <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
   crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <!--Script -->
