--- a/src/test.html
+++ b/src/test.html
@@ -21,17 +21,29 @@
 
 <body>
     <div class="movie-card">
-        <img id="img-test" src="./img/coyote-vs-acme.jpg" alt="">
-        <h2>results.title<h2>
-        <h3>original_title</h3>
-        <h4>Nota: vote_average /10 </h4>
-        <h4>Ano de Lançamento: </h4>
+        <img id="img-test" src="./img/coyote-vs-acme.jpg" alt="${result.title}">
+        <h3>${result.title}<h3>
+        <h4>${result.original_title}</h4>
+        <h4> Nota: ${result.vote_average}/10 </h4>
+        <h4> Ano de Lançamento: ${result.release_date}
         <div class="wrapper-favorite">
             <h4>Favoritar</h4>
             <span class="material-symbols-outlined"> favorite </span>
+            <div class="accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                      Accordion Item #1
+                    </button>
+                  </h2>
+                  <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                  </div>
+                </div>
         </div>
-        <button>OverView</button>
     </div>
+
+
 
 </body>
 
