--- a/src/test.html
+++ b/src/test.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="./css/movie-cards.css">
+    <!--CSS BOOTstrap-->
+    <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -29,21 +31,36 @@
         <div class="wrapper-favorite">
             <h4>Favoritar</h4>
             <span class="material-symbols-outlined"> favorite </span>
-            <div class="accordion accordion-flush" id="accordionFlushExample">
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                      Accordion Item #1
-                    </button>
-                  </h2>
-                  <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
-                  </div>
-                </div>
         </div>
-    </div>
+        <div class="accordion">
+          <div class="accordion-item">
+            <div class="accordion-header" onclick="toggleAccordion(this)">Item 1</div>
+            <div class="accordion-content">
+              <p>Conteúdo do item 1</p>
+            </div>
+          </div>
+      </div>
 
 
+    <div class="movie-card">
+      <img id="img-test" src="./img/coyote-vs-acme.jpg" alt="${result.title}">
+      <h3>${result.title}<h3>
+      <h4>${result.original_title}</h4>
+      <h4> Nota: ${result.vote_average}/10 </h4>
+      <h4> Ano de Lançamento: ${result.release_date}
+      <div class="wrapper-favorite">
+          <h4>Favoritar</h4>
+          <span class="material-symbols-outlined"> favorite </span>
+      </div>
+      <div class="accordion">
+        <div class="accordion-item">
+          <div class="accordion-header" onclick="toggleAccordion(this)">Item 1</div>
+          <div class="accordion-content">
+            <p>Conteúdo do item 1</p>
+          </div>
+        </div>
+
+<script src="./scripts/search_film_API.js"></script>
 
 </body>
 
