--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
   
 </header>
 <main>
-<h1 id="title-cine">Nas telas do Cinema</h1>
+<h1 id="title-cine"></h1>
 
 <!-- Full-width images with number -->
 <div class="mySlides fades " id="img-active">
