--- a/src/index.html
+++ b/src/index.html
@@ -381,10 +381,14 @@
     <script src="./scripts/search_film_API.js" defer></script>
   </main>
 
-  <footer class="footer">
+  <footer class="main-footer">
     <div>
       <p> Nos siga nas redes sociais</p>
-      <p><a href="link dos icones">icones</a></p>
+      <img src="img/logoinsta.png" alt="">
+      <img src="img/logoface.png" alt="">
+      <img src="img/logotwitter.png" alt="">
+      <img src="img/logolinkedin.png" alt="">
+      <p><a href=""></a></p>
     </div>
   </footer>
 
