Montagem página Streamings e Configuração de API

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
         <input id="search-input" type="text" placeholder="Busque por ator, filme ou série.."> <span id="search-icon" class="material-symbols-outlined"> search </span>
       </li>
       <li>
-        Sessão Nostalgia <span class="material-symbols-outlined"> videocam </span>
+        Streamings <span class="material-symbols-outlined"> videocam </span>
       </li>
       <li>
         Favoritos <span class="material-symbols-outlined"> favorite </span>
@@ -61,7 +61,7 @@
     <menu id="menu-mobile">
       <ul>
         <li>Favoritos</li>
-        <li>Sessão Nostalgia</li>
+        <li>Streamings</li>
         <li>Pesquisar</li>
       </ul>
     </menu>
