--- a/src/index.html
+++ b/src/index.html
@@ -46,8 +46,8 @@
       <li>
         <input id="search-input" type="text" placeholder="Busque por ator, filme ou série.."> <span id="search-icon" class="material-symbols-outlined"> search </span>
       </li>
-      <li>
-        Streamings <span class="material-symbols-outlined"> videocam </span>
+      <li >
+        Streamings <span class="material-symbols-outlined" href="./streamings.html"> videocam </span>
       </li>
       <li>
         Favoritos <span class="material-symbols-outlined"> favorite </span>
