Configurando cards byStreaming

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
         <input id="search-input" type="text" placeholder="Busque por ator, filme ou série.."> <span id="search-icon" class="material-symbols-outlined"> search </span>
       </li>
       <li >
-        Streamings <span class="material-symbols-outlined" href="./streamings.html"> videocam </span>
+        <a href="./streamings.html">Streamings</a> <span class="material-symbols-outlined" > videocam </span>
       </li>
       <li>
         Favoritos <span class="material-symbols-outlined"> favorite </span>
