--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,6 @@
   crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <!--Script -->
-  
-  
   <title>Cine Guide</title>
 </head>
 <body>
@@ -44,13 +42,13 @@
         <h1> Logo</h1>
       </li>
       <li>
-        <input id="search-input" type="text" placeholder="Busque por ator, filme ou série.."> <span id="search-icon" class="material-symbols-outlined"> search </span>
+        <input id="search-input" type="text" placeholder="Busque por filme ..."> <span id="search-icon" class="material-symbols-outlined"> search </span>
       </li>
       <li >
         <a href="./streamings.html">Streamings</a> <span class="material-symbols-outlined" > videocam </span>
       </li>
       <li>
-        Favoritos <span class="material-symbols-outlined"> favorite </span>
+        <a href="./favorites.html">Favoritos</a> <span class="material-symbols-outlined"> favorite </span>
       </li>
       <li data-toggle="modal" data-target="#loginModal">Login</li>
       <li data-toggle="modal" data-target="#signupModal">SignUp</li>
