--- a/src/streamings.html
+++ b/src/streamings.html
@@ -41,7 +41,7 @@
       <a href="./streamings.html">Streamings</a> <span class="material-symbols-outlined" > videocam </span>
     </li>
     <li>
-      Favoritos <span class="material-symbols-outlined"> favorite </span>
+      <a href="./favorites.html">Favoritos</a> <span class="material-symbols-outlined"> favorite </span>
     </li>
     <li data-toggle="modal" data-target="#loginModal">Login</li>
     <li data-toggle="modal" data-target="#signupModal">SignUp</li>
