Fix function GetList Bug

--- a/src/streamings.html
+++ b/src/streamings.html
@@ -124,6 +124,7 @@
   <script src="./scripts/script.js" defer></script>
   <script src="./scripts/login.js" defer></script>
   <script src="./scripts/signup.js" defer></script>
+  <script src="./scripts/search_film_API.js"></script>
 </body>
 
 </html>
