--- a/src/favorites.html
+++ b/src/favorites.html
@@ -60,6 +60,7 @@
   <main>
 
   </main>
+    <script src="./scripts/search_film_API.js"></script>
     <script src="./scripts/favorites.js"></script>
 </body>
 </html>
