Adiciona o href do index nas demais páginas

--- a/src/streamings.html
+++ b/src/streamings.html
@@ -31,8 +31,8 @@
 </head>
 <header>
   <ul>
-    <li id="logo">
-      <h1> Logo</h1>
+    <li id="logo" href="./index.html">
+      <h1><strong><a href="./index.html">Cine Guide</a></strong></h1>
     </li>
     <li>
       <input id="search-input" type="text" placeholder="Busque por ator, filme ou série.."> <span id="search-icon" class="material-symbols-outlined"> search </span>
