--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
   <header>
     <ul>
       <li id="logo">
-        <h1> Logo</h1>
+        <h1><strong>Cine Guide</strong></h1>
       </li>
       <li>
         <input id="search-input" type="text" placeholder="Busque por filme ..."> <span id="search-icon" class="material-symbols-outlined"> search </span>
@@ -63,10 +63,9 @@
         <li>Pesquisar</li>
       </ul>
     </menu>
-    
   </ul>
-  
 </header>
+
 <!-- Modal de Login -->
 <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel"
 aria-hidden="true">
