--- a/src/favorites.html
+++ b/src/favorites.html
@@ -29,7 +29,7 @@
     <header>
         <ul>
           <li id="logo">
-            <h1> Logo</h1>
+            <a href="./index.html">Logo</a>
           </li>
           <li>
             <input id="search-input" type="text" placeholder="Busque por filme ..."> <span id="search-icon" class="material-symbols-outlined"> search </span>
