--- a/src/streamings.html
+++ b/src/streamings.html
@@ -11,10 +11,7 @@
   <!--Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500&family=Roboto:wght@300;400&display=swap"
-    rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500&family=Roboto:wght@300;400&display=swap"  rel="stylesheet">
   <!--Link CSS -->
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/movie-cards.css">
@@ -32,7 +29,7 @@
 <header>
   <ul>
     <li id="logo">
-      <h1> Logo</h1>
+      <a href="./index.html">Logo</a>
     </li>
     <li>
       <input id="search-input" type="text" placeholder="Busque por ator, filme ou série.."> <span id="search-icon" class="material-symbols-outlined"> search </span>
@@ -64,11 +61,6 @@
   <main>
     <div class="streaming-container">
       <div>
-        <label for="type"> Tipo: </label>
-        <select name="type" id="type">
-          <option value="film">Filme</option>
-          <option value="tv">Série</option>
-        </select>
         <label for="streaming"> Escolha a streaming</label>
         <select name="streaming" id="streaming">
           <option value="8">Netflix</option>
@@ -102,8 +94,8 @@
         </select>
         <button id="search-button">Buscar</button>
       </div>
-  
     </div>
+
   </main>
 
 
