--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- LinkBanner-->
-  <script src="./scripts/banner.js"></script>
+
   <link rel="stylesheet" href="./css/banner.css">
   <!-- Link GoogleIcons-->
   <link rel="stylesheet"
@@ -19,36 +18,34 @@
     rel="stylesheet">
   <!--iframe-video-->
   <link rel="stylesheet" href="./css/iframe.css">
-  <script src="./scripts/iframe.js" defer></script>
   <!--Link CSS -->
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/movie-cards.css">
   <!--Links Glider-->
   <link rel="stylesheet" href="./Glider.js-master/glider.min.css">
   <!--Link Boostrap -->
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-  crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <!--Script -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <title>Cine Guide</title>
 </head>
+
 <body>
-  <script src="./scripts/script.js" defer></script>
-  <script src="./scripts/login.js" defer></script>
-  <script src="./scripts/signup.js" defer></script>
   <header>
     <ul>
       <li id="logo">
         <h1><strong>Cine Guide</strong></h1>
       </li>
       <li>
-        <input id="search-input" type="text" placeholder="Busque por filme ..."> <span id="search-icon" class="material-symbols-outlined"> search </span>
-      </li>
-      <li >
-        <a href="./streamings.html">Streamings</a> <span class="material-symbols-outlined" > videocam </span>
+        <input id="search-input" type="text" placeholder="Busque por filme ...">
+        <span id="search-icon" class="material-symbols-outlined"> search </span>
       </li>
       <li>
-        <a href="./favorites.html">Favoritos</a> <span class="material-symbols-outlined"> favorite </span>
+        <a href="./streamings.html">Streamings</a>
+        <span class="material-symbols-outlined"> videocam </span>
+      </li>
+      <li>
+        <a href="./favorites.html">Favoritos</a>
+        <span class="material-symbols-outlined"> favorite </span>
       </li>
       <li data-toggle="modal" data-target="#loginModal">Login</li>
       <li data-toggle="modal" data-target="#signupModal">SignUp</li>
@@ -58,95 +55,95 @@
     </ul>
     <menu id="menu-mobile">
       <ul>
-        <li>Favoritos</li>
-        <li>Streamings</li>
+        <li><a href="./favorites.html">Favoritos</a></li>
+        <li><a href="./streamings.html">Streamings</a></li>
         <li>Pesquisar</li>
       </ul>
     </menu>
-  </ul>
-</header>
+    </ul>
+  </header>
 
-<!-- Modal de Login -->
-<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel"
-aria-hidden="true">
-<div class="modal-dialog" role="document">
-  <div class="modal-content">
-    <div class="modal-header">
-      <h5 class="modal-title" id="loginModalLabel">Login</h5>
-      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="modal-body">
-      <form>
-        <div class="form-group">
-          <label for="username">Username</label>
-          <input type="text" class="form-control" id="username" placeholder="Enter your username">
+  <!-- Modal de Login -->
+  <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="loginModalLabel">Login</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" class="form-control" id="password" placeholder="Enter your password">
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <label for="username">Username</label>
+              <input type="text" class="form-control" id="username" placeholder="Enter your username">
+            </div>
+            <div class="form-group">
+              <label for="password">Password</label>
+              <input type="password" class="form-control" id="password" placeholder="Enter your password">
+            </div>
+          </form>
         </div>
-      </form>
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-primary" id="loginButton">Login</button>
-      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" id="loginButton">Login</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
     </div>
   </div>
-</div>
-</div>
- <!-- Modal de Signup -->
-<div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="signupModalLabel" aria-hidden="true">
-<div class="modal-dialog" role="document">
-  <div class="modal-content">
-    <div class="modal-header">
-      <h5 class="modal-title" id="signupModalLabel">Sign Up</h5>
-      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="modal-body">
-      <!-- Conteúdo do formulário de cadastro -->
-      <form>
-        <div class="form-group">
-          <label for="signupUsername">Username</label>
-          <input type="text" class="form-control" id="signupUsername" placeholder="Enter username">
+  <!-- Modal de Signup -->
+  <div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="signupModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="signupModalLabel">Sign Up</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
-        <div class="form-group">
-          <label for="signupPassword">Password</label>
-          <input type="password" class="form-control" id="signupPassword" placeholder="Enter password">
-        </div>
-        <div class="form-group">
-          <label for="signupConfirmPassword">Confirm Password</label>
-          <input type="password" class="form-control" id="signupConfirmPassword" placeholder="Confirm password">
-        </div>
-        <div class="form-group">
-          <label for="signupEmail">Email</label>
-          <input type="email" class="form-control" id="signupEmail" placeholder="Enter email">
-        </div>
+        <div class="modal-body">
+          <!-- Conteúdo do formulário de cadastro -->
+          <form>
+            <div class="form-group">
+              <label for="signupUsername">Username</label>
+              <input type="text" class="form-control" id="signupUsername" placeholder="Enter username">
+            </div>
+            <div class="form-group">
+              <label for="signupPassword">Password</label>
+              <input type="password" class="form-control" id="signupPassword" placeholder="Enter password">
+            </div>
+            <div class="form-group">
+              <label for="signupConfirmPassword">Confirm Password</label>
+              <input type="password" class="form-control" id="signupConfirmPassword" placeholder="Confirm password">
+            </div>
+            <div class="form-group">
+              <label for="signupEmail">Email</label>
+              <input type="email" class="form-control" id="signupEmail" placeholder="Enter email">
+            </div>
 
-        <div id="signupSuccessMessage" style="display: none;">Dados cadastrados com sucesso</div>
-      </form>
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      <button type="button" class="btn btn-primary" id="signupButton" data-dismiss="modal">Signup</button>
+            <div id="signupSuccessMessage" style="display: none;">Dados cadastrados com sucesso</div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" id="signupButton" data-dismiss="modal">Signup</button>
+        </div>
+      </div>
     </div>
   </div>
-</div>
-</div>
 
+  <main>
+    <h1 id="title-cine"></h1>
 
-<main>
-<h1 id="title-cine"></h1>
-
-<!-- Full-width images with number -->
-<div class="mySlides fades " id="img-active">
-  <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/2x-2iYxgMFU">Assista
-    ao
-    Trailer</button>
-    <img src="./img/Homem aranha de volta.png" class="images">
+    <!-- Full-width images with number -->
+    <div class="mySlides fades " id="img-active">
+      <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/2x-2iYxgMFU">Assista
+        ao
+        Trailer</button>
+      <img src="./img/Homem aranha de volta.png" class="images">
     </div>
 
     <div class="mySlides fades">
@@ -205,7 +202,7 @@ aria-hidden="true">
     </div>
     </section>
     <h1 id="launch-title">Lançamentos</h1>
-    
+
     <div class="glider-contain">
       <div class="glider">
         <div class="card">
@@ -359,7 +356,7 @@ aria-hidden="true">
           <div class="info">
             <h2>Um Sonho de Liberdade (1994)</h2>
             <p>Duração: 2h22min</p>
-            <p>  Gênero: Drama, Ficção Policial </p>
+            <p> Gênero: Drama, Ficção Policial </p>
             <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=yzvgVa69Kdg.P"
                 target="_blank">Google Play Filmes e Tv</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/v1nZq1vfgSw">Assista ao
@@ -384,7 +381,8 @@ aria-hidden="true">
             <h2>Club da Luta (1999)</h2>
             <p>Duração: 2h19min</p>
             <p>Gênero: Suspense, Drama</p>
-            <p>Onde Assistir: <a href="https://www.primevideo.com/dp/amzn1.dv.gti.14b02470-fb0f-7d69-c65e-b9ab1c235283?autoplay=0&ref_=atv_cf_strg_wb"
+            <p>Onde Assistir: <a
+                href="https://www.primevideo.com/dp/amzn1.dv.gti.14b02470-fb0f-7d69-c65e-b9ab1c235283?autoplay=0&ref_=atv_cf_strg_wb"
                 target="_blank">AmazonPrime</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/Fs0-4NLSO2Y">Assista ao
               Trailer</button>
@@ -397,7 +395,8 @@ aria-hidden="true">
             <p>Duração: 2h22min
               Gênero: Drama, Romance
             </p>
-            <p>Onde Assistir: <a href="https://www.primevideo.com/dp/amzn1.dv.gti.dcb980c4-4b61-2618-1a5e-75b3b56f1996?autoplay=0&ref_=atv_cf_strg_wb"
+            <p>Onde Assistir: <a
+                href="https://www.primevideo.com/dp/amzn1.dv.gti.dcb980c4-4b61-2618-1a5e-75b3b56f1996?autoplay=0&ref_=atv_cf_strg_wb"
                 target="_blank">AmazonPrime</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/vDY_uZAaU7g">Assista ao
               Trailer</button>
@@ -446,25 +445,44 @@ aria-hidden="true">
       <div role="tablist" class="dots"></div>
     </div>
     <div id="responsive-dots"></div>
-    <script src="./Glider.js-master/glider.min.js" defer></script>
-    <script src="./scripts/search_film_API.js" defer></script>
   </main>
 
   <footer class="main-footer">
-    <div>
-      <p> Nos siga nas redes sociais</p>
-      <img src="img/logoinsta.png" alt="">
-      <img src="img/logoface.png" alt="">
-      <img src="img/logotwitter.png" alt="">
-      <img src="img/logolinkedin.png" alt="">
-      <p><a href=""></a></p>
-    </div>
+    <p><strong>SIGA-NOS<strong></p>
+    <ul>
+      <li><img src="img/logoinsta.png" alt="logo-instagram" class="social-logo"></li>
+      <li><img src="img/logoface.png" alt="logo-facebook" class="social-logo"></li>
+      <li><img src="img/logotwitter.png" alt="logo-twitter" class="social-logo"></li>
+      <li><img src="img/logolinkedin.png" alt="logo-linkedin" class="social-logo"></li>
+    </ul>
   </footer>
 
+  <!--Importa os arquivos JS-->
+  <script src="./scripts/script.js" defer></script>
+  <script src="./scripts/login.js" defer></script>
+  <script src="./scripts/signup.js" defer></script>
+  <!-- Scripts do Banner-->
+  <script src="./scripts/banner.js"></script>
+  <!-- Scripts do frame-->
+  <script src="./scripts/iframe.js" defer></script>
+
+  <!--Carrega o jquery para o bootstrap-->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+  <!--Scripts do glider-->
+  <script src="./Glider.js-master/glider.min.js" defer></script>
+  <script src="./scripts/search_film_API.js" defer></script>
+
   <!--Scripts do Bootstrap-->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KyZXEAg3QhqLMpG8r+f8/W6bsrr4/J+5q9aXVkK0K4o3sggXp6HBsCd8DmeT23rB" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KyZXEAg3QhqLMpG8r+f8/W6bsrr4/J+5q9aXVkK0K4o3sggXp6HBsCd8DmeT23rB"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
