Ajusta o footer, ajusta componentes nas páginas

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -5,23 +5,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- CDN Font awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <!-- Link GoogleIcons-->
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
   <!--Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500&family=Roboto:wght@300;400&display=swap"
     rel="stylesheet">
+
   <!--Link CSS -->
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/movie-cards.css">
+
   <!--Link Boostrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <!--Script -->
 
   <title>Cine Guide</title>
 </head>
@@ -57,14 +65,34 @@
     </menu>
     </ul>
   </header>
+
   <main>
   </main>
-  <footer class="main-footer">
-    <p><strong>SIGA-NOS<strong></p>
-    <img src="img/logoinsta.png" alt="logo-instagram">
-    <img src="img/logoface.png" alt="logo-facebook">
-    <img src="img/logotwitter.png" alt="logo-twitter">
-    <img src="img/logolinkedin.png" alt="logo-linkedin">
+
+  <footer>
+    <div id="footer-content">
+      <div id="footer-contacts">
+        <h3><strong>SIGA-NOS</strong></h3>
+        <div id="footer-social-media">
+          <a href="#" class="footer-link" id="instagram">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a href="#" class="footer-link" id="facebook">
+            <i class="fa-brands fa-facebook"></i>
+          </a>
+          <a href="#" class="footer-link" id="twitter">
+            <i class="fa-brands fa-twitter"></i>
+          </a>
+          <a href="#" class="footer-link" id="linkedin">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div id="footer-copyright">
+      &#169
+      2023 - All rights reserved
+    </div>
   </footer>
 
   <script src="./scripts/search_film_API.js"></script>
