--- a/src/streamings.html
+++ b/src/streamings.html
@@ -18,7 +18,9 @@
   <!--Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500&family=Roboto:wght@300;400&display=swap"  rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500&family=Roboto:wght@300;400&display=swap"
+    rel="stylesheet">
   <!--Link CSS -->
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/movie-cards.css">
@@ -35,13 +37,11 @@
 </head>
 <header>
   <ul>
-<<<<<<< HEAD
     <li id="logo">
       <a href="./index.html">Logo</a>
-=======
+    </li>
     <li id="logo" href="./index.html">
       <h1><a href="./index.html">Cine Guide</a></h1>
->>>>>>> a187bf4b9d4cb3233d65c7e5c17d4566bfc1dd5c
     </li>
     <li>
       <input id="search-input" type="text" placeholder="Busque por ator, filme ou série.."> <span id="search-icon"
@@ -86,7 +86,6 @@
           <option value="512"> TNTGo </option>
           <option value="484">NOW</option>
           <option value="531">Paramount Plus</option>
-
         </select>
       </div>
       <div>
@@ -108,12 +107,7 @@
         </select>
         <button id="search-button">Buscar</button>
       </div>
-<<<<<<< HEAD
-
-=======
->>>>>>> 42ec24dcdc54b090766435564162943558679006
     </div>
-
   </main>
 
   <footer>
