--- a/src/favorites.html
+++ b/src/favorites.html
@@ -35,7 +35,6 @@
 </head>
 
 <body>
-<<<<<<< HEAD
   <header>
     <ul>
       <li id="logo">
@@ -59,79 +58,76 @@
     </ul>
     <menu id="menu-mobile">
       <ul>
-        <li>Favoritos</li>
-        <li>Streamings</li>
-        <li>Pesquisar</li>
-=======
-    <header>
-        <ul>
-          <li id="logo">
-<<<<<<< HEAD
-            <a href="./index.html">Logo</a>
-=======
-            <h1><strong><a href="./index.html">Cine Guide</a></strong></h1>
->>>>>>> a187bf4b9d4cb3233d65c7e5c17d4566bfc1dd5c
-          </li>
-          <li>
-            <input id="search-input" type="text" placeholder="Busque por filme ..."> <span id="search-icon" class="material-symbols-outlined"> search </span>
-          </li>
-          <li >
-            <a href="./streamings.html">Streamings</a> <span class="material-symbols-outlined" > videocam </span>
-          </li>
-          <li>
-            <a href="./favorites.html">Favoritos</a> <span class="material-symbols-outlined"> favorite </span>
-          </li>
-          <li data-toggle="modal" data-target="#loginModal">Login</li>
-          <li data-toggle="modal" data-target="#signupModal">SignUp</li>
-          <li id="burguer">
-            <span class="material-symbols-outlined"> menu </span>
-          </li>
-        </ul>
-        <menu id="menu-mobile">
-          <ul>
-            <li>Favoritos</li>
-            <li>Streamings</li>
-            <li>Pesquisar</li>
-          </ul>
-        </menu>
-        
->>>>>>> 42ec24dcdc54b090766435564162943558679006
+        <li><a href="./favorites.html">Favoritos</a></li>
+        <li><a href="./streamings.html">Streamings</a></li>
+        <li><a href="./index.html">Pesquisar</a></li>
       </ul>
     </menu>
-    </ul>
-  </header>
+    <header>
+      <ul>
+        <li id="logo">
+          <a href="./index.html">Logo</a>
+          <h1><strong><a href="./index.html">Cine Guide</a></strong></h1>
+        </li>
+        <li>
+          <input id="search-input" type="text" placeholder="Busque por filme ..."> <span id="search-icon"
+            class="material-symbols-outlined"> search </span>
+        </li>
+        <li>
+          <a href="./streamings.html">Streamings</a> <span class="material-symbols-outlined"> videocam </span>
+        </li>
+        <li>
+          <a href="./favorites.html">Favoritos</a> <span class="material-symbols-outlined"> favorite </span>
+        </li>
+        <li data-toggle="modal" data-target="#loginModal">Login</li>
+        <li data-toggle="modal" data-target="#signupModal">SignUp</li>
+        <li id="burguer">
+          <span class="material-symbols-outlined"> menu </span>
+        </li>
+      </ul>
+      <menu id="menu-mobile">
+        <ul>
+          <li>Favoritos</li>
+          <li>Streamings</li>
+          <li>Pesquisar</li>
+        </ul>
+      </menu>
+      </ul>
+      </menu>
+      </ul>
+    </header>
 
-  <main>
-  </main>
+    <main>
+    </main>
 
-  <footer>
-    <div id="footer-content">
-      <div id="footer-contacts">
-        <h3><strong>SIGA-NOS</strong></h3>
-        <div id="footer-social-media">
-          <a href="#" class="footer-link" id="instagram">
-            <i class="fa-brands fa-instagram"></i>
-          </a>
-          <a href="#" class="footer-link" id="facebook">
-            <i class="fa-brands fa-facebook"></i>
-          </a>
-          <a href="#" class="footer-link" id="twitter">
-            <i class="fa-brands fa-twitter"></i>
-          </a>
-          <a href="#" class="footer-link" id="linkedin">
-            <i class="fa-brands fa-linkedin"></i>
-          </a>
+    <footer>
+      <div id="footer-content">
+        <div id="footer-contacts">
+          <h3><strong>SIGA-NOS</strong></h3>
+          <div id="footer-social-media">
+            <a href="#" class="footer-link" id="instagram">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="#" class="footer-link" id="facebook">
+              <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="#" class="footer-link" id="twitter">
+              <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a href="#" class="footer-link" id="linkedin">
+              <i class="fa-brands fa-linkedin"></i>
+            </a>
+          </div>
         </div>
       </div>
-    </div>
-    <div id="footer-copyright">
-      &#169
-      2023 - All rights reserved
-    </div>
-  </footer>
+      <div id="footer-copyright">
+        &#169
+        2023 - All rights reserved
+      </div>
+    </footer>
 
-  <script src="./scripts/search_film_API.js"></script>
-  <script src="./scripts/favorites.js"></script>
+    <script src="./scripts/search_film_API.js"></script>
+    <script src="./scripts/favorites.js"></script>
 </body>
 
 </html>
