Linkando as páginas no responsivo

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -60,7 +60,7 @@
       <ul>
         <li><a href="./favorites.html">Favoritos</a></li>
         <li><a href="./streamings.html">Streamings</a></li>
-        <li><a href="./index.html">Pesquisar</a></li>
+        <li><a href="./search-page.html">Pesquisar</a></li>
       </ul>
     </menu>
   </header>
@@ -94,7 +94,7 @@
         2023 - All rights reserved
       </div>
     </footer>
-
+    <script src="./scripts/script.js"></script>
     <script src="./scripts/search_film_API.js"></script>
     <script src="./scripts/favorites.js"></script>
 </body>
