--- a/src/index.html
+++ b/src/index.html
@@ -52,8 +52,8 @@
   <script src="./scripts/signup.js" defer></script>
   <header>
     <ul>
-      <li id="logo">
-        <h1>Cine Guide</h1>
+      <li id="logo" href="./index.html">
+        <h1><a href="./index.html">Cine Guide</a></h1>
       </li>
       <li>
         <input id="search-input" type="text" placeholder="Busque por filme ...">
@@ -77,7 +77,7 @@
       <ul>
         <li><a href="./favorites.html">Favoritos</a></li>
         <li><a href="./streamings.html">Streamings</a></li>
-        <li>Pesquisar</li>
+        <li><a href="./search-page.html">Pesquisar</a></li>
       </ul>
     </menu>
     </ul>
