--- a/src/streamings.html
+++ b/src/streamings.html
@@ -41,7 +41,7 @@
       <h1><a href="./index.html">Cine Guide</a></h1>
     </li>
     <li>
-      <input id="search-input" type="text" placeholder="Busque por ator, filme ou série.."> <span id="search-icon"
+      <input id="search-input" type="text" placeholder="Busque por filme ..."> <span id="search-icon"
         class="material-symbols-outlined"> search </span>
     </li>
     <li>
@@ -58,9 +58,9 @@
   </ul>
   <menu id="menu-mobile">
     <ul>
-      <li>Favoritos</li>
-      <li>Streamings</li>
-      <li>Pesquisar</li>
+      <li><a href="./favorites.html">Favoritos</a></li>
+      <li><a href="./streamings.html">Streamings</a></li>
+      <li><a href="./search-page.html">Pesquisar</a></li>
     </ul>
   </menu>
 
