--- a/src/search-page.html
+++ b/src/search-page.html
@@ -55,9 +55,9 @@
             </ul>
             <menu id="menu-mobile">
               <ul>
-                <li>Favoritos</li>
-                <li>Streamings</li>
-                <li>Pesquisar</li>
+                <li><a href="./favorites.html">Favoritos</a></li>
+                <li><a href="./streamings.html">Streamings</a></li>
+                <li><a href="./search-page.html">Pesquisar</a></li>
               </ul>
             </menu>
           
