Add o footer na page de pesquisa

--- a/src/search-page.html
+++ b/src/search-page.html
@@ -75,6 +75,31 @@
           <script src="./scripts/login.js" defer></script>
           <script src="./scripts/signup.js" defer></script>
           <script src="./scripts/search_page.js" defer></script>
+          <footer>
+            <div id="footer-content">
+              <div id="footer-contacts">
+                <h3>SIGA-NOS</h3>
+                <div id="footer-social-media">
+                  <a href="#" class="footer-link" id="instagram">
+                    <i class="fa-brands fa-instagram"></i>
+                  </a>
+                  <a href="#" class="footer-link" id="facebook">
+                    <i class="fa-brands fa-facebook"></i>
+                  </a>
+                  <a href="#" class="footer-link" id="twitter">
+                    <i class="fa-brands fa-twitter"></i>
+                  </a>
+                  <a href="#" class="footer-link" id="linkedin">
+                    <i class="fa-brands fa-linkedin"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div id="footer-copyright">
+              &#169
+              2023 - All rights reserved
+            </div>
+          </footer>
     </body>
 
     
