--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,7 @@
   <script src="./scripts/script.js" defer></script>
   <script src="./scripts/login.js" defer></script>
   <script src="./scripts/signup.js" defer></script>
+  <script src="./scripts/logout.js" defer></script>
   <header>
     <ul>
       <li id="logo" href="./index.html">
@@ -69,6 +70,8 @@
       </li>
       <li data-toggle="modal" data-target="#loginModal">Login</li>
       <li data-toggle="modal" data-target="#signupModal">SignUp</li>
+      <li id="logout"><i class="fas fa-sign-out-alt"></i></li>
+
       <li id="burguer">
         <span class="material-symbols-outlined"> menu </span>
       </li>
